Review service done with all methods